--- a/index.html
+++ b/index.html
@@ -5,42 +5,44 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-       	<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-KM47F4M');</script>
-		<!-- End Google Tag Manager -->
-        <title>Thomas Sutlovic</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-    <!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KM47F4M"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
-        <div class="container">
-            <div class="text">
-                <h1 class="summary">Hello...? Is anybody there?</h1>
-                <h3 class="summary">My name is Thomas Sutlovic</h3>
-                <p class="summary">I'm a software developer who loves the web. I'm also currently available for hire!</p>
-            </div>
-            <a href="./ResumeTS.pdf" target="_blank">
-                <div  class="button">Who is this guy?</div>
-            </a>
-            <a href="./PHP/index.html">
-                <div class="button">PHP example</div>
-            </a>
-            <a href="./Parallax/index.html">
-            	<div class="button">Parallax Example</div>
-            </a>
-            <a href="./Personal/index.html">
-            	<div class="button">Continue</div>
-            </a>
-        </div>
-    </body>
+
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-40339548-7"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-40339548-7');
+	</script>
+	<title>Thomas Sutlovic</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="https://i.imgur.com/ASecjwP.png">
+</head>
+
+<body>
+	<div class="container">
+		<div class="text">
+			<h1 class="summary">Hello...? Is anybody there?</h1>
+			<h3 class="summary">My name is Thomas Sutlovic</h3>
+			<p class="summary">I'm a student and a developer and currently looking for a co-op position</p>
+		</div>
+		<a href="./Sutlovic_Thomas.pdf" target="_blank">
+			<div class="button">Resume</div>
+		</a>
+		<a href="./PHP/index.html">
+			<div class="button">PHP example</div>
+		</a>
+		<a href="./Parallax/index.html">
+			<div class="button">GitHub</div>
+		</a>
+		<a href="./Personal/index.html">
+			<div class="button">Continue</div>
+		</a>
+	</div>
+</body>
+
 </html>
