--- a/Personal/index.html
+++ b/Personal/index.html
@@ -1,77 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Thomas Sutlovic</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link type="text/css" rel="stylesheet" href="style.css">
-    </head>
-    <body id="gradient">
-<!--
-        <div class="nav-bar">
-            <ul>
-              <li>
-                    <a href="#" class="nav-item" >Home</a>
-                </li>
-          		<li>
-       			  <a href="#about" class="nav-item">About</a>
-          		</li>
-          		<li>
-       			  <a href="#projects" class="nav-item">Projects</a>
-          		</li>
-            </ul>
-        </div>
--->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-        <div class="content">
-        	<div class="home">
-        		<img class="img-circle" src="images/ASecjwP.png">
-        		<h1>Thomas Sutlovic</h1>
-				<h4>Programmer</h4><h4>Student</h4><h4>Entrepreneur</h4>
-       			<p>This webpage is still a work in progress</p>
-        	</div>
+<head>
+	<title>Thomas Sutlovic</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link type="text/css" rel="stylesheet" href="style.css">
+	<link rel="icon" href="https://i.imgur.com/ASecjwP.png">
+</head>
 
-        	<div class="jumbotron" id="gradient2" class="about">
-        		<h1>About Me</h1>
-        		<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-        	</div>
+<body id="gradient">
 
-<!--        	<div class="projects"></div>-->
-    	</div>
-    </body>
+	<!-- Navbar -->
+	<nav class="navbar navbar-dark bg-primary">
+		<!-- Navbar title -->
+		<a class="navbar-brand" href="#">Thomas Sutlovic</a>
+		<!-- Toggle button -->
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<!-- The items in the navbar -->
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav mr-auto">
+				<!-- Home -->
+				<li class="nav-item active">
+					<a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<!-- Projects -->
+				<li class="nav-item">
+					<a class="nav-link" href="/Projects/index.html">Projects</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+	<!-- All the content -->
+	<div class="content">
+		<!-- The main part -->
+		<div class="home">
+			<img class="img-circle" src="images/ASecjwP.png">
+			<h1>Thomas Sutlovic</h1>
+			<h4>Programmer</h4>
+			<h4>Student</h4>
+			<h4>Entrepreneur</h4>
+			<p>This webpage is still a work in progress</p>
+		</div>
+
+		<!-- About me -->
+		<div class="jumbotron about">
+			<h1 class="display-4">About Me</h1>
+			<p class="lead">I'm a student at Sheridan College taking mobile computing,I've learned many languages including C, C++, C#, Java, Python and SQL</p>
+			<p>Currently I'm looking for a co-op for school</p>
+			<hr class="my-4">
+		</div>
+	</div>
+
+	<!-- scripts to load JS for bootstrap -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 </html>
